tests/schema-gen/tests/projection/schemas/valid/complex-multi-path-optional.prisma
generator client {
  provider = "prisma-client"
  output   = "../../generated/prisma"
}

generator prismaIDBrowser {
  provider   = "idb-client-generator"
  output     = "../../generated/prisma-idb"
  outboxSync = true
  rootModel  = "User"
}

datasource db {
  provider = "postgresql"
}

model User {
  id          String       @id
  name        String
  departments Department[]
  projects    Project[]
  tickets     Ticket[]
}

model Department {
  id     String @id @default(uuid())
  name   String
  user   User   @relation(fields: [userId], references: [id])
  userId String
  teams  Team[]
}

model Team {
  id           String      @id @default(uuid())
  name         String
  department   Department? @relation(fields: [departmentId], references: [id])
  departmentId String?
  tickets      Ticket[]
}

model Project {
  id      String   @id @default(uuid())
  name    String
  user    User     @relation(fields: [userId], references: [id])
  userId  String
  tickets Ticket[]
}

model Ticket {
  id         String   @id @default(uuid())
  title      String

  // Path 1 (length 3, middle optional): team → department? → user
  team       Team     @relation(fields: [teamId], references: [id])
  teamId     String

  // Path 2 (length 2, first optional): project? → user
  project    Project? @relation(fields: [projectId], references: [id])
  projectId  String?

  // Path 3 (length 1, direct optional): assignee?
  assignee   User?    @relation(fields: [assigneeId], references: [id])
  assigneeId String?
}

model Changelog {
  id            String          @id @default(uuid(7))
  model         String
  keyPath       Json
  operation     ChangeOperation
  scopeKey      String
  outboxEventId String          @unique

  @@index([model, id])
}

enum ChangeOperation {
  create
  update
  delete
}
